<package>
  <name>ompl_planner_base</name>
  <version>0.1.0</version>
  <description>

     The ompl_planner_base implements an interface to the Open Motion Planning Library (ompl) ROS
     package by Rice University in form of a plugin to the global_planner for navigation of the mobile base.
     To start PR2 in simulation with the ompl_planner_base plugin loaded to the base global planner
     call pr2_ompl_planner_base_gazebo.launch or ..._stage.launch from within tis package.
     The rviz launchfile starts up rviz with the topic for the global path set accordingly.
      You can switch between the different planners of the ompl library, by setting the "global_planner_type"
      parameter (/move_base_node/OMPLPlannerBase/global_planner_type) to the name of the planner you want to use.
      Currently, valid options are (KPIECE, LBKPIECE, SBL, pSBL, RRTConnect, EST, PRM, RRT, pRRT, LazyRRT).

  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <author>Christian Connette, Eitan Marder-Eppstein</author>
  <license>BSD</license>

  <url>http://ros.org/wiki/ompl_planner_base</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ros cturtle dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>base_local_planner</build_depend>

  <!-- ros sandbox dependencies -->
  <build_depend>ompl_ros_interface</build_depend>
  <!-- ros 3rd party dependencies -->
  <build_depend>ompl</build_depend>

  <export>

  </export>

</package>


